--- a/src/app/app-menu/app-menu.component.html
+++ b/src/app/app-menu/app-menu.component.html
@@ -57,9 +57,15 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./index3.html" class="nav-link">
+                <a href="/addData" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
-                  <p>Dashboard v3</p>
+                  <p>Add Data</p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="/editData" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Edit Data</p>
                 </a>
               </li>
             </ul>
