--- a/src/app/divisions/divisions.component.html
+++ b/src/app/divisions/divisions.component.html
@@ -20,8 +20,11 @@
                                 <td>{{currentDivisions.name}}</td>
                                 <td>{{currentDivisions.description}}</td>
                             </tr>
+                            
                      </tbody>
                  </table>
+                    <button type="submit" class="btn btn-primary">Edit</button>
+                    <button type="submit" class="btn btn-danger">Delete</button>
                </div>
            </div>
         </div>
